[gd_scene load_steps=2 format=2]

[ext_resource path="res://examples/Printer.gd" type="Script" id=1]

[node name="Printer" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 464.0
margin_bottom = 40.0
alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer"]
margin_right = 155.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 1

[node name="CheckButtonPlay" type="CheckButton" parent="HBoxContainer"]
margin_left = 159.0
margin_right = 340.0
margin_bottom = 40.0
pressed = true
text = "play animations"

[node name="ButtonPrintStray" type="Button" parent="HBoxContainer"]
margin_left = 344.0
margin_right = 464.0
margin_bottom = 40.0
text = "Print stray nodes"

[connection signal="toggled" from="HBoxContainer/CheckButtonPlay" to="." method="_on_CheckButtonPlay_toggled"]
[connection signal="pressed" from="HBoxContainer/ButtonPrintStray" to="." method="_on_ButtonPrintStray_pressed"]
